--- a/moduli18/index.html
+++ b/moduli18/index.html
@@ -8,18 +8,39 @@
 </head>
 <body>
      
-    <div id="translate"> this div is transalte method</div>
+    <!-- <div id="translate"> this div is transalte method</div>
     <div id="rotate"> this div is transalte method</div>
     <div id="scale"> this div is transalte method</div>
     <div id="skewx"> skewx method</div>
     <div id="skewy"> skewy  method</div>
     <div id="rotatex"> rotatex  method</div>
     <div id="rotatey"> rotatey  method</div>
-    <div id="rotatez"> rotatez  method</div>
+    <div id="rotatez"> rotatez  method</div> -->
 
 
 
 
-    
+    <div>Test</div>
+
+
+<figure id="figure_1">
+    <img src="imazhe/download (1).jfif"style="width: 150px; height: 150px;">
+</figure>
+<figure id="figure_1">
+    <img src= "imazhe/download" (1).jfif"style="width: 150px; height: 150px;">
+</figure>
+<figure id="figure_1">
+    <img src="imazhe/download (1).jfif"style="width: 150px; height: 150px;">
+</figure>
+<figure id="figure_1">
+    <img src="imazhe/download (1).jfif"style="width: 150px; height: 150px;">
+</figure>
+
+<div>class="loader"</div>
+
+     <img src="moduli18/imazhe/download (1).jfif">
+     <img src="moduli18/imazhe/download (2).jfif">
+     <img src="moduli18/imazhe/download.jfif">
+     <img src="moduli18/imazhe/images.jfif">
 </body>
 </html>
