--- a/moduli 20/index1.html
+++ b/moduli 20/index1.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 	<title>Website Layout</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
+	
+</head><link rel="stylesheet" type="text/css" href="style.css">
 <body>
 	<section id="section-1">
 		<div class="container">
