--- a/moduli 21/Projekti/index.html
+++ b/moduli 21/Projekti/index.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Website Layout</title>
+	<title>Responinsive Design</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<section id="section-1">
