--- a/Personal Project/index.html
+++ b/Personal Project/index.html
@@ -3,68 +3,80 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Sports News Website</title>
+  <title>Business Website</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Header -->
+  <!-- Header Section -->
   <header>
-    <div class="container">
-      <h1>Sports News</h1>
-      <nav>
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#news">News</a></li>
-          <li><a href="#teams">Teams</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
+    <div class="logo">
+      <h1>Biznis haribo</h1>
     </div>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <!-- Main Content -->
-  <main>
-    <section id="home" class="banner">
-      <h2>Welcome to the Sports Hub!</h2>
-      <p>Your one-stop source for the latest sports news.</p>
-    </section>
-
-    <section id="news" class="section">
-      <h2>Latest News</h2>
-      <article class="news-item">
-        <h3>Champions League Finals Highlights</h3>
-        <p>Exciting matches and unexpected turns in the latest Champions League final!</p>
-      </article>
-      <article class="news-item">
-        <h3>NBA Finals Update</h3>
-        <p>Catch up with the most thrilling moments of the 2025 NBA finals.</p>
-      </article>
-    </section>
-
-    <section id="teams" class="section">
-      <h2>Top Teams</h2>
-      <div class="team">
-        <img src="team1.jpg" alt="Team 1">
-        <p><strong>Team A</strong> - A dominant force in football.</p>
-      </div>
-      <div class="team">
-        <img src="team2.jpg" alt="Team 2">
-        <p><strong>Team B</strong> - Rising stars in basketball.</p>
-      </div>
-    </section>
-  </main>
-
-  <!-- Footer -->
-  <footer id="contact">
-    <div class="container">
-      <p>Contact us: info@sportsnews.com</p>
-      <ul>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">Instagram</a></li>
-      </ul>
+  <!-- Hero Section -->
+  <section id="home" class="hero">
+    <div class="hero-content">
+   
+      <h2>Your Trusted Business Partner</h2>
+      <p>We provide innovative solutions for your business growth.</p>
+      <a href="#services" class="cta-button">Our Services</a>
     </div>
+  </section>
+
+  <!-- Services Section -->
+  <section id="services">
+    <h2>Our Services</h2>
+    <div class="service-cards">
+      <div class="service-card">
+        <h3>Consulting</h3>
+        <p>Expert advice to improve your business strategy.</p>
+      </div>
+      <div class="service-card">
+        <h3>Web Development</h3>
+        <p>Custom web solutions tailored to your business needs.</p>
+      </div>
+      <div class="service-card">
+        <h3>Marketing</h3>
+        <p>Grow your business with effective marketing strategies.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- About Us Section -->
+  <section id="about">
+    <h2>About Us</h2>
+    <p>We are a team of professionals committed to helping your business thrive. Our mission is to deliver top-notch services and solutions to meet your unique needs.</p>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <form>
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name" required>
+
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="message">Message</label>
+      <textarea id="message" name="message" rows="4" required></textarea>
+
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
+
+  <!-- Footer Section -->
+  <footer>
+    <p>&copy; 2025 Business Name. All Rights Reserved.</p>
   </footer>
 </body>
 </html>
