--- a/Personal Project/about.html
+++ b/Personal Project/about.html
@@ -17,7 +17,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">Services</a></li>
         <li><a href="about.html">About Us</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -45,8 +45,58 @@
     </div>
 </section>
 
+<h1>
+  ABOUT US!
+</h1>
 
-
+<p class="abouti">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+   Eaque cum expedita, exercitationem nihil eligendi sit amet, beatae minima perspiciatis dolore libero ea commodi blanditiis perferendis ex accusantium ullam nostrum neque?
+Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt veritatis voluptates non nulla quisquam, quis labore doloribus necessitatibus temporibus iste eligendi quasi excepturi molestias corporis assumenda itaque maxime, suscipit ipsam.
+Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut dolore aliquid ducimus cupiditate eius mollitia dolorum, maxime, esse laborum veritatis nobis minus fugiat in officia cum labore dolorem beatae necessitatibus.
+Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates vero quidem laborum, temporibus animi minima, impedit rerum itaque nulla, recusandae minus eos a voluptatum non neque dignissimos ad nobis numquam?
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+   Eaque cum expedita, exercitationem nihil eligendi sit amet, beatae minima perspiciatis dolore libero ea commodi blanditiis perferendis ex accusantium ullam nostrum neque
+   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+   Eaque cum expedita, exercitationem nihil eligendi sit amet, beatae minima perspiciatis dolore libero ea commodi blanditiis perferendis ex accusantium ullam nostrum neque
+   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+   Eaque cum expedita, exercitationem nihil eligendi sit amet, beatae minima perspiciatis dolore libero ea commodi blanditiis perferendis ex accusantium ullam nostrum neque
+   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+   Eaque cum expedita, exercitationem nihil eligendi sit amet, beatae minima perspiciatis dolore libero ea commodi blanditiis perferendis ex accusantium ullam nostrum neque
+   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+   Eaque cum expedita, exercitationem nihil eligendi sit amet, beatae minima perspiciatis dolore libero ea commodi blanditiis perferendis ex accusantium ullam nostrum neque 
+   Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+   Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+   Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+      Eaque cum expedita, exercitationem nihil eligendi sit amet, beatae minima perspiciatis dolore libero ea commodi blanditiis perferendis ex accusantium ullam nostrum neque
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+      Eaque cum expedita, exercitationem nihil eligendi sit amet, beatae minima perspiciatis dolore libero ea commodi blanditiis perferendis ex accusantium ullam nostrum neque
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+      Eaque cum expedita, exercitationem nihil eligendi sit amet, beatae minima perspiciatis dolore libero ea commodi blanditiis perferendis ex accusantium ullam nostrum neque
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+      Eaque cum expedita, exercitationem nihil eligendi sit amet, beatae minima perspiciatis dolore libero ea commodi blanditiis perferendis ex accusantium ullam nostrum neque
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+      Eaque cum expedita, exercitationem nihil eligendi sit amet, beatae minima perspiciatis dolore libero ea commodi blanditiis perferendis ex accusantium ullam nostrum neque
+      Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+      Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+      Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+         Eaque cum expedita, exercitationem nihil eligendi sit amet, beatae minima perspiciatis dolore libero ea commodi blanditiis perferendis ex accusantium ullam nostrum neque
+         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+         Eaque cum expedita, exercitationem nihil eligendi sit amet, beatae minima perspiciatis dolore libero ea commodi blanditiis perferendis ex accusantium ullam nostrum neque
+         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+         Eaque cum expedita, exercitationem nihil eligendi sit amet, beatae minima perspiciatis dolore libero ea commodi blanditiis perferendis ex accusantium ullam nostrum neque
+         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+         Eaque cum expedita, exercitationem nihil eligendi sit amet, beatae minima perspiciatis dolore libero ea commodi blanditiis perferendis ex accusantium ullam nostrum neque
+         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+         Eaque cum expedita, exercitationem nihil eligendi sit amet, beatae minima perspiciatis dolore libero ea commodi blanditiis perferendis ex accusantium ullam nostrum neque</p>
   <!-- Footer Section -->
   <footer>
     <p>&copy; 2025 Business Name. All Rights Reserved.</p>
