--- a/Personal Project/index.html
+++ b/Personal Project/index.html
@@ -14,10 +14,10 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#home">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="about.html">About Us</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -26,8 +26,8 @@
   <section id="home" class="hero">
     <div class="hero-content">
    
-      <h2>Your Trusted Business Partner</h2>
-      <p>We provide innovative solutions for your business growth.</p>
+      <h1>Your Trusted Business Partnerx</h1>
+      <h3>We provide innovative solutions for your business growth.</h3>
       <a href="#services" class="cta-button">Our Services</a>
     </div>
   </section>
@@ -40,7 +40,7 @@
 			</div>
 			<div class="services-box">
 				<div class="service">
-					<img src="5.jpg">
+					<img src="38.jpg" width="400px" height="200px">
 					<h3>BRANDING</h3>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
 				</div>
@@ -50,7 +50,7 @@
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
 				</div>
         <div class="service">
-					<img src="5.jpg">
+					<img src="01.jpg">
 					<h3>BRANDING</h3>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
 				</div>
